tests/integration/snapshots/integration__snapshot_tui_test__branding_box_bottom.snap
---
source: tests/unit/tui_test.rs
assertion_line: 216
expression: border
---
╚═══════════════════════════════════════╝
