tests/integration/snapshots/integration__snapshot_tui_test__branding_logo_start.snap
---
source: tests/integration/snapshot_tui_test.rs
expression: logo
---
╔═══════════════════════════════════════╗
║ ░▒▓ AGR ▓▒░ ⏺ ▁▃▅▇▅▃▁▃▅▇▅▃▁▃▅▇▅▃▁ REC ║
╠═══════════════════════════════════════╣
