tests/integration/snapshots/integration__snapshot_tui_test__confirm_unlock_modal.snap
---
source: tests/integration/snapshot_tui_test.rs
expression: output
---
                                                            
                                                            
  ┌ Confirm Unlock ─────────────────────────────────────┐   
  │                   Session Locked                    │   
  │                                                     │   
  │           This session is being recorded.           │   
  │       Lock: PID 12345 since 2025-01-15T10:30        │   
  │                                                     │   
  │               y: Yes 🔓   |  n: No ❌                 │   
  └─────────────────────────────────────────────────────┘
