tests/integration/snapshots/integration__snapshot_tui_test__context_menu_restore_with_backup.snap
---
source: tests/integration/snapshot_tui_test.rs
expression: output
---
                                                            
                                                            
                                                            
          ┌ Menu ────────────────────────────────┐          
          │Actions                               │          
          │                                      │          
          │    Play (p)                          │          
          │    Copy to clipboard (c)             │          
          │    Rename (r)                        │          
          │    Optimize (t)                      │          
          │    Analyze (a)                       │          
          │>   Restore from backup               │          
          │    Delete (d)                        │          
          └──────────────────────────────────────┘
