tests/integration/snapshots/integration__snapshot_tui_test__file_explorer_empty.snap
---
source: tests/integration/snapshot_tui_test.rs
assertion_line: 478
expression: output
---
┌ Sessions ────────────────────────────────────────────────┐┌ Preview ─────────────────────────────┐
│                                                          ││No file selected                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
└──────────────────────────────────────────────────────────┘└──────────────────────────────────────┘
